# mechknownet_autolabel

./: CMakeLists.txt  README.md  README.md~  activated_object.ply  cloud_with_label.ply  package.xml
3rd/srhandnet/: README.md  setup.py
3rd/srhandnet/scripts/: hand_key_ros.py  webcam_demo.py
3rd/srhandnet/srhandnet/: __init__.py  kinematics.py  peak.py  visualization.py
scripts/: activated_object.ply  cloud_with_label.ply  function_part_detector.py  grasp_detector.py  grasping_point.py  mask_rcnn_server.py  trajectory_detector.py
src/: activated_obj_traj.ply~  activated_object.ply  activated_object2.ply  associated_obj_traj.ply~  cloud_with_label.ply  cloud_with_label1.ply  coordinate_converter.cpp  frame0.ply  frame1.ply  function_demonstration.cpp  function_demonstration_activated.cpp  function_demonstration_associated.cpp  grasping_demonstration.cpp  hand_object_cloud.ply  hand_object_cloud0.ply  hand_object_cloud1.ply  roller.ply  saw.ply  trajectory_demonstration.cpp  trajectory_demonstration_tabletop.cpp  trajectory_demonstration_tabletop.cpp~
src/discarded/: function_demonstration_old.cpp  trajectory_demonstration.cpp  trajectory_demonstration_bk.cpp  trajectory_demonstration_tabletop_bk.cpp
src/trajectory/: frame0001.ply  frame0002.ply  frame0003.ply  frame0004.ply  frame0005.ply  frame0006.ply  frame0007.ply  frame0008.ply  frame0009.ply  frame0010.ply  frame0011.ply  frame0012.ply  frame0013.ply  frame0014.ply  frame0015.ply  frame0016.ply  frame0017.ply  frame0018.ply  frame0019.ply
srhandnet/: model.py
srhandnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
srhandnet/data/: __init__.py
